--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     <body>
         <h1>Evaluation Awareness Probing</h1>
         <ul class="dataset-list">
-            <li><a href="AD_top_bottom_20_html_probe_visualizations/index.html">Situational_Awareness_Dataset_Stages_Oversight</a></li>
-        <li><a href="andbagging_top_bottom_20_html_probe_visualizations/index.html">Apollo_Deception_Sandbagging</a></li>
-        <li><a href="i_liar_top_bottom_20_html_probe_visualizations/index.html">Apollo_Deception_AI_Liar</a></li>
-        <li><a href="ildchat_top_bottom_20_html_probe_visualizations/index.html">Wildchat_500Qs_subset</a></li>
-        <li><a href="le_diamond_top_bottom_20_html_probe_visualizations/index.html">Humanity's_Last_Exam</a></li>
-        <li><a href="lpaca_top_bottom_20_html_probe_visualizations/index.html">Apollo_Alpaca_subset</a></li>
-        <li><a href="oleplaying_top_bottom_20_html_probe_visualizations/index.html">Apollo_Deception_Roleplaying</a></li>
-        <li><a href="pqa_diamond_top_bottom_20_html_probe_visualizations/index.html">GPQA_Diamond</a></li>
-        <li><a href="robe_visualizations/index.html">Apollo_Insider_Trading</a></li>
-        <li><a href="ruthfulqa_top_bottom_20_html_probe_visualizations/index.html">TruthfulQA</a></li>
-        <li><a href="sm8k_top_bottom_20_html_probe_visualizations/index.html">GMS8K_1000Qs_subset</a></li>
+            <li><a href="evaluation-awareness-probing.github.io/AD_top_bottom_20_html_probe_visualizations/index.html">Situational_Awareness_Dataset_Stages_Oversight</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/andbagging_top_bottom_20_html_probe_visualizations/index.html">Apollo_Deception_Sandbagging</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/i_liar_top_bottom_20_html_probe_visualizations/index.html">Apollo_Deception_AI_Liar</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/ildchat_top_bottom_20_html_probe_visualizations/index.html">Wildchat_500Qs_subset</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/le_diamond_top_bottom_20_html_probe_visualizations/index.html">Humanity's_Last_Exam</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/lpaca_top_bottom_20_html_probe_visualizations/index.html">Apollo_Alpaca_subset</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/oleplaying_top_bottom_20_html_probe_visualizations/index.html">Apollo_Deception_Roleplaying</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/pqa_diamond_top_bottom_20_html_probe_visualizations/index.html">GPQA_Diamond</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/robe_visualizations/index.html">Apollo_Insider_Trading</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/ruthfulqa_top_bottom_20_html_probe_visualizations/index.html">TruthfulQA</a></li>
+        <li><a href="evaluation-awareness-probing.github.io/sm8k_top_bottom_20_html_probe_visualizations/index.html">GMS8K_1000Qs_subset</a></li>
 
         </ul>
     </body>
